k8s/03-s3-services/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scratchy-s3-services
  namespace: scratchy-ns
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: scratchy-s3-services-label
